--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="chris_e">Chris Evans</string>
     <string name="mark">Mark Ruffalo</string>
     <string name="chris_h">Chris Hemsworth</string>
+    <string name="moovie">Moovie!!!</string>
 </resources>
