--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="movies_list">Movies list</string>
     <string name="avengers_end_game">Avengers: End Game</string>
-    <string name="movie_duration">137 MIN</string>
+    <string name="movie_duration">MIN</string>
 </resources>
