--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="back_btn_txt">Back</string>
-    <string name="txt13">13+</string>
+    <string name="txt13">13</string>
     <string name="film_title">Avengers:\nEnd Game</string>
     <string name="genre">Action, Adventure, Fantasy</string>
     <string name="num_of_views">125</string>
